--- a/css/personal.css
+++ b/css/personal.css
@@ -28,3 +28,60 @@ header .container #zx {
     top: 25px;
     right: 20px;
 }
+
+.container h1 {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 40px;
+}
+
+.container>img {
+    width: 100%;
+}
+
+.container h2 {
+    font-size: 30px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+.container .box {
+    width: 1432px;
+    height: 285px;
+    position: relative;
+    display: flex;
+    overflow: hidden;
+}
+
+.container .box>img {
+    position: absolute;
+    top: calc(50% - 22px);
+    cursor: pointer;
+}
+
+.container .box #leftBtn {
+    left: 0;
+}
+
+.container .box #rightBtn {
+    right: 0;
+}
+
+.container .box li {
+    width: 1432px;
+    display: flex;
+    justify-content: space-around;
+}
+
+/* 底部 */
+footer {
+    width: 100%;
+    height: 170px;
+    background-color: #192023;
+    color: #fff;
+    font-size: 12px;
+    line-height: 30px;
+    padding-top: 30px;
+    box-sizing: border-box;
+    margin-top: 30px;
+}
